--- a/templates/account/password_reset.html
+++ b/templates/account/password_reset.html
@@ -21,7 +21,7 @@
                 </form>
                 <hr>
                 <div class="text-center">
-                   <p><a href="{% url 'login' %}">Volver a Iniciar Sesión</a></p>
+                   <p><a href="{% url 'account_login' %}">Volver a Iniciar Sesión</a></p>
                 </div>
             </div>
         </div>
