--- a/templates/registration/registro.html
+++ b/templates/registration/registro.html
@@ -25,7 +25,7 @@
                 </form>
                 <hr>
                 <div class="text-center registro-links">
-                    <p>¿Ya tienes una cuenta? <a href="{% url 'login' %}"><i class="fa fa-sign-in-alt"></i> Inicia sesión aquí</a></p>
+                    <p>¿Ya tienes una cuenta? <a href="{% url 'account_login' %}"><i class="fa fa-sign-in-alt"></i> Inicia sesión aquí</a></p>
                 </div>
             </div>
         </div>
