--- a/templates/base.html
+++ b/templates/base.html
@@ -39,6 +39,12 @@
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     {# me-auto empuja lo siguiente a la derecha #}
                     <li class="nav-item">
+                        <a class="nav-link {% if request.resolver_match.url_name == 'dashboard' %}active{% endif %}"
+                            href="{% url 'dashboard' %}">
+                            <i class="fas fa-tachometer-alt"></i> Dashboard
+                        </a>
+                    </li>
+                    <li class="nav-item">
                         <a
                             class="nav-link {% if request.resolver_match.url_name == 'lista_de_tareas_url' %}active{% endif %}"
                             href="{% url 'lista_de_tareas_url' %}"
